minor UI changes

--- a/static/html/edit.html
+++ b/static/html/edit.html
@@ -1,5 +1,5 @@
 
-<div class="track">
+<div class="track" id="track-edit">
     <h3 class="doc-name">{[{ track.pl.requisits }]}</h3>
     <uib-tabset active="activeJustified" justified="true" type="pills" class="doc-tabs">
 
