--- a/static/html/track/e_repeated.html
+++ b/static/html/track/e_repeated.html
@@ -1,13 +1,29 @@
 <div class="clearfix">
     <h3>Повторне відстеження</h3>
-    <div class="col-xs-6 pull-left">
-        <div class="panel panel-default clearfix">
-            <div class="panel-heading">Термін здійснення заходів з відстеження</div>
-            <div class="pull-left panel-body" inline-date="track.pl.termin_rep"
-                 on-save="saveData('term_rep', value)" on-cancel="log('CANCEL', value)"></div>
+    <div class="col-xs-6 pull-left switch">
+        <div class="clearfix">
+        <div class="panel panel-default pull-left">
+            <div class="panel-heading ">Висновок Комітету щодо відповідності звіту вимогам постанови КМУ від 11.03.04 р. №308</div>
+            <div class="pull-left panel-body" inline-edit="track.pl.concl_rep"
+                 on-save="saveData('concl_rep', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+        <div class="panel panel-default pull-left">
+            <div class="panel-heading high">Порушено?</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.cr_bool"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+        </div>
+        <div class="clearfix">
+            <div class="panel panel-default comment">
+                <div class=" panel-heading">Коментар</div>
+                <div class="panel-body" inline-comment="track.pl.concl_rep_comment"
+                     on-save="saveData('concl_rep_comment', value)" on-cancel="log('CANCEL', value)"></div>
+            </div>
         </div>
     </div>
-    <div class="col-xs-6 pull-left switch">
+    <div class="col-xs-6 pull-left switch basic">
+        <div class="clearfix">
         <div class="panel panel-default pull-left">
             <div class="panel-heading">Результати відстеження результативності</div>
             <div class="pull-left panel-body" inline-edit="track.pl.rslt_rep"
@@ -15,10 +31,27 @@
         </div>
         <div class="panel panel-default pull-left">
             <div class="panel-heading">Ефективне?</div>
-            <div class="panel-body"><switcher ng-model="track.pl.rslt_rep_bool"
-                                              true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.rslt_rep_bool"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+        </div>
+        <div class="clearfix">
+            <div class="panel panel-default comment">
+                <div class=" panel-heading">Коментар</div>
+                <div class="panel-body" inline-comment="track.pl.rslt_rep_comment"
+                     on-save="saveData('rslt_rep_comment', value)" on-cancel="log('CANCEL', value)"></div>
+            </div>
         </div>
     </div>
+    <div class="col-xs-6 pull-left">
+        <div class="panel panel-default clearfix">
+            <div class="panel-heading">Термін здійснення заходів з відстеження</div>
+            <div class="pull-left panel-body" inline-date="track.pl.termin_rep"
+                 on-save="saveData('term_rep', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+
     <div class="col-xs-6 pull-left">
         <div class="panel panel-default clearfix">
             <div class="panel-heading">Дата підписання  звіту  про відстеження результативності регуляторного акта</div>
@@ -40,16 +73,5 @@
                  on-save="saveData('gived_rep', value)" on-cancel="log('CANCEL', value)"></div>
         </div>
     </div>
-    <div class="col-xs-6 pull-left switch">
-        <div class="panel panel-default pull-left">
-            <div class="panel-heading ">Висновок Комітету щодо відповідності звіту вимогам постанови КМУ від 11.03.04 р. №308</div>
-            <div class="pull-left panel-body" inline-edit="track.pl.concl_rep"
-                 on-save="saveData('concl_rep', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-        <div class="panel panel-default pull-left">
-            <div class="panel-heading high">Порушено?</div>
-            <div class="panel-body"><switcher ng-model="track.pl.cr_bool"
-                                              true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
-        </div>
-    </div>
+
 </div>
