--- a/static/html/create.html
+++ b/static/html/create.html
@@ -33,13 +33,18 @@
 
     <div class="col-xs-12 clearfix">
         <div class="panel panel-default">
-            <div class="panel-heading">Розробник регуляторного акта {[{ fdata.developer }]}</div>
+            <div class="panel-heading">Розробник регуляторного акта</div>
             <div class="panel-body developer">
                 <div >
-                    <input type="text" ng-model="fdata.developer" placeholder="Розробник"
-                           uib-typeahead="gov as gov.Name for gov in govs.govs | filter:{Name:$viewValue}"
-                           class="form-control" typeahead-min-length="2" typeahead-focus-on-select="true"
-                           typeahead-editable="false" typeahead-on-select="fdata.developer = $item.Id">
+                    <input type="text" ng-model="fdata.developer"
+                           placeholder="Розробник"
+                           class="form-control"
+                           uib-typeahead="gov as gov.name for gov in governs | filter:$viewValue"
+                           typeahead-min-length="2"
+                           typeahead-focus-on-select="true"
+                           typeahead-editable="false"
+                           typeahead-on-select="fdata.developer = $item.id"
+                           typeahead-input-formatter="$model != 0 ? governs[$model-1].name : governs[$model].name">
                 </div>
             </div>
         </div>
@@ -87,7 +92,7 @@
                                                 placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31"></div>
             </div>
         </div>
-        <div class="col-xs-6 switch">
+        <div class="col-xs-6 ">
             <div class="panel panel-default pull-left" style="width: 79.2%;">
                 <div class="panel-heading">Результати відстеження результативності</div>
                 <div class="panel-body"><input class="form-control" ng-model="fdata.rslt_basic"></div>
