--- a/static/html/ratings/ratings4.html
+++ b/static/html/ratings/ratings4.html
@@ -15,8 +15,14 @@
 
     <div class="col-md-3">
         <div class="input-group">
-            <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="popup2.opened"
-                   datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+            <input type="text" class="form-control"
+                   uib-datepicker-popup="{[{format}]}"
+                   ng-model="dt"
+                   is-open="popup2.opened"
+                   datepicker-options="dateOptions"
+                   ng-required="true"
+                   close-text="Close"
+                   alt-input-formats="altInputFormats"/>
             <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open2()">
                 <i class="glyphicon glyphicon-calendar"></i></button>
@@ -28,7 +34,7 @@
     <div class="col-md-2">
         <button class="btn bnt-primary"
                 ng-click="printDiv('report')">
-            <span class="glyphicon glyphicon-print "></span>
+            <span class="glyphicon glyphicon-refresh "></span>
             Перерахувати</button>
     </div>
     <div class="col-md-1">
